--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
+    "**/*.mjs",
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/lib/placeholder-data.ts",
